--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -33,7 +33,7 @@ p {
  }
 
  button:active {
-     transform: translateY(4px);
+     transform: translateY(4x);
  }
 
  .main {
@@ -47,7 +47,7 @@ p {
     content: " ";
     position: absolute;
     top: 1em; 
-    left: 6em;
+    left: 7em;
     width: 75%; 
     height: 70%;  
     opacity: .7; 
@@ -56,7 +56,7 @@ p {
     display: inline-block;
 }
 
-.target p {
+.targetme p {
     text-align: center;
     color: #0A194C;
     font-size: 250%;
