finished js added some last minute css, changed html to reflect new js

--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -35,6 +35,10 @@ p {
  button:active {
      transform: translateY(4x);
  }
+ 
+ button:disabled{
+     background-color: #7D7D7D;
+ }
 
  .main {
      margin: 0 auto;
